--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@
 }
  nav {
      text-align: center;
-     background-color: #333;
+     background-color: rgb(0, 0, 0);
      width: 100%;
 }
  nav a {
@@ -14,7 +14,7 @@
      text-decoration: none;
 }
  nav a:hover {
-     color: #1abc9c;
+     color: #7500a7;
      font-size: 20px;
 }
  nav ul{
@@ -41,8 +41,8 @@
  header{
      padding: 60px;
      text-align: center;
-     background-color: #1abc9c;
-     color: white;
+     background-color: #9400D3;
+     color: rgb(0, 0, 0);
 }
  .container {
      display: flex;
@@ -59,14 +59,14 @@
      padding: 20px;
 }
  .imgFake {
-     background-color: #aaa;
+     background-color: rgb(181, 103, 255);
      width: 100%;
      padding: 20px;
 }
  .footer {
      padding: 20px;
-     background-color: #333;
-     color: white;
+     background-color: #9400D3;
+     color: rgb(0, 0, 0);
      text-align: center;
 }
  @media screen and (max-width: 700px) {
@@ -74,7 +74,7 @@
          flex-direction: column;
     }
      header{
-         background-color: #1abc9c;
+         background-color: #9400D3;
     }
      .label, .input, input[type=submit], input[type=reset] {
          width: 100%;
